[docs] Rename some "Fixpoint modes"
Rename some of our Fixpoint modes.

- Lego Brick Mode --> Library Mode
- Library Mode --> Framework Mode

I wasn't sure about using "Lego Brick" because I didn't really like
bundling a trademarked named in our docs. Library and Framework
sometimes sound similar, but I think they fit our tiers of usage well:

From [this blog](https://martinfowler.com/bliki/InversionOfControl.html)
by Martin Fowler:

> Inversion of Control is a key part of what makes a framework different
> to a library. A library is essentially a set of functions that you can
> call, these days usually organized into classes. Each call does some
> work and returns control to the client.

> A framework embodies some abstract design, with more behavior built
> in. In order to use it you need to insert your behavior into various
> places in the framework either by subclassing or by plugging in your
> own classes. The framework's code then calls your code at these
> points.

This fits with our purposes, where "Library Mode" is for when the client
just wants to sprinkle in Fixpoint's functionality in their app.
"Framework Mode" is where we ask them to follow our usage pattern, and
with that they get extra benefits.

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -68,10 +68,10 @@ orchestration.
 
 You can use Fixpoint in three ways:
 
-1. [**Lego-bricks mode**][lego-brick-mode]: pick and choose the "lego brick"
-   components you want to add to your existing AI application. Add memory,
+1. [**Library mode**][library-mode]: pick and choose the specific components you
+   want to add to your existing AI application. Add memory,
    caching, checkpointing, without changing any part of your code.
-2. [**Library mode**][library-mode]: Build multi- or single-agent workflows with
+2. [**Framework mode**][framework-mode]: Build multi- or single-agent workflows with
    Fixpoint, and use your existing document stores and databases.
 3. [**Infra mode**][infra-mode]: Use Fixpoint's platform for agent workflows so
    you don't need to operate your own durable workflow infra or set up databases
@@ -91,8 +91,8 @@ Then the best way to get started is to go to the [Getting Started page](/getting
 You can also continue on to read the rest of the Fixpoint docs, or take a look
 at our [Github repo](https://github.com/gofixpoint/fixpoint/).
 
-[lego-brick-mode]: /lego-brick-mode
 [library-mode]: /library-mode
+[framework-mode]: /framework-mode
 [infra-mode]: /infra-mode
 [memory]: /memory
 [durability]: /workflows-and-durability
