--- a/docs/src/pages/library-mode.mdx
+++ b/docs/src/pages/library-mode.mdx
@@ -1,14 +1,15 @@
 # Library Mode
 
-If you are building multi-step workflows that coordinate one or more AIs, you'll
-want to start using Fixpoint's workflows so your code is:
+With Library Mode, the goal is that you can take an existing LLM application
+and mix in extra capabilities.
 
-- reliable in the face of system failure
-- easier to trace and understand multiple steps
-- easy to extend workflows with extra steps, or run more complex AI inference
-  requests in parallel
-- can layer in human-in-the-loop wherever necessary
+That means adding memory, caching, agent callbacks, etcetera without having to
+set up any new infrastructure. There are some things you'll miss out on in this
+mode, such as data and workflow durability in the face of system failure, but
+it's a great way to get started and add some extra capabilities to your
+programs.
 
-Refer to the [workflows docs](/workflows-and-durability/workflows) for info on
-how to use workflows, or check out a worflow example in the
-[Getting Started section](/getting-started).
+See the docs on [setting up agents](/agents), adding [memory](/memory) and
+[caching](/workflows-and-durability/caching). For any of these, if you use
+in-memory or on-disk storage, you can effectively just drop in these
+capabilities and not change any other parts of your system.
