--- a/docs/src/pages/modes-overview.mdx
+++ b/docs/src/pages/modes-overview.mdx
@@ -7,15 +7,15 @@ program. If you want more advanced features, you can progressively adopt them.
 
 We say that Fixpoint runs in 3 modes:
 
-1. [**Lego-bricks mode**][lego-brick-mode]: pick and choose the "lego brick"
-   components you want to add to your existing AI application. Add memory,
-   caching, checkpointing, without changing any part of your code.
-2. [**Library mode**][library-mode]: Build multi- or single-agent workflows with
+1. [**Library mode**][library-mode]: pick and choose the components components
+   you want to add to your existing AI application. Add memory, caching,
+   checkpointing, without changing any part of your code.
+2. [**Framework mode**][framework-mode]: Build multi- or single-agent workflows with
    Fixpoint, and use your existing document stores and databases.
 3. [**Infra mode**][infra-mode]: Use Fixpoint's platform for agent workflows so
    you don't need to operate your own durable workflow infra or set up databases
    for AI memory and documents.
 
-[lego-brick-mode]: /lego-brick-mode
 [library-mode]: /library-mode
+[framework-mode]: /framework-mode
 [infra-mode]: /infra-mode
