--- a/docs/src/pages/workflows-and-durability/caching.mdx
+++ b/docs/src/pages/workflows-and-durability/caching.mdx
@@ -7,7 +7,7 @@ rerun code sections without making more inference requests.
 If you are using
 [Fixpoint's workflow constructs](/workflows-and-durability/workflows),
 you get caching by default. But if you are using Fixpoint in
-[Lego Brick Mode](/lego-brick-mode), you can take your existing Python code and
+[Library Mode](/library-mode), you can take your existing Python code and
 modify your OpenAI client to turn on caching:
 
 ```python
