--- a/docs/src/pages/workflows-and-durability/workflows.mdx
+++ b/docs/src/pages/workflows-and-durability/workflows.mdx
@@ -34,7 +34,20 @@ See more docs and an example in the
 
 ## Request/Reply Workflows
 
-_docs coming soon_
+Request/Reply Workflows follow a client/server pattern, where each request in
+the workflow generates a response. This is well suited for chatbots where the
+workflow only advances to the next step after a user interaction.
+
+When building a Request/Reply Workflow, your AI agents have memories about their
+past responses and can save and update state, such as documents or structured
+data forms. This is useful for making your AI remember the past conversation
+details with a user, or for building chatbots that can extract structured data
+before deciding to pass that data off to another program or change the
+conversation topic.
+
+See more docs and example use cases in the
+[Request/Reply Workflows section](/workflows-and-durability/request-reply-workflows).
+
 
 ## Imperative Workflows
 
@@ -57,3 +70,4 @@ _more docs coming soon_
 
 [durable]: /workflows-and-durability
 [structured-programming]: https://en.wikipedia.org/wiki/Structured_programming
+[Request/Reply Workflows section]: /workflows-and-durability/request-reply-workflows
