[docs] tweak some other sections

--- a/docs/src/pages/framework-mode.mdx
+++ b/docs/src/pages/framework-mode.mdx
@@ -10,5 +10,4 @@ want to start using Fixpoint's workflows so your code is:
 - can layer in human-in-the-loop wherever necessary
 
 Refer to the [workflows docs](/workflows-and-durability/workflows) for info on
-how to use workflows, or check out a worflow example in the
-[Getting Started section](/getting-started).
+how to use workflows, along with some code examples.
