--- a/docs/src/pages/memory.mdx
+++ b/docs/src/pages/memory.mdx
@@ -49,4 +49,8 @@ then all memories are stored for the workflow. Future workflow steps can query
 the memory bank for memories from earlier in the workflow, and filter by agent,
 or by the relevant task or step within the workflow.
 
-_code example coming soon_
+See the [workflows overview](/workflows-and-durability) for a summary, or the
+[Request/Reply Workflows](/workflows-and-durability/request-reply-workflows)
+section for chatbot-style memory and workflows, or the
+[Structured Workflows](/workflows-and-durability/structured-workflows) section
+for multi-step workflows that look more like a series of normal function calls.
