[docs] Fix phrasing on "Workflows" page

--- a/docs/src/pages/workflows-and-durability/workflows.mdx
+++ b/docs/src/pages/workflows-and-durability/workflows.mdx
@@ -1,6 +1,6 @@
 # Workflows
 
-There are two ways of modeling workflows:
+There are three ways of modeling workflows:
 
 1. **Structured Workflows**: let you decorate your normal Python functions and
    classes so what looks like a normal program gets the abilities of:
