--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -1,8 +1,8 @@
 # Fixpoint
 
-Fixpoint is open-source infra for reliable multi-step AI workflows. We let you
-build and connect multiple AI agents that know your data and work together to
-run autonomous or human-in-the-loop workflows.
+Fixpoint is open-source infra for stateful AI workflows with human-in-the-loop.
+We let you build long-running AI workflows that you can transition between
+chatbot, autonomous agents, and human-in-the-loop review.
 
 Normally, when making multi-step AI workflows and agents, you need to solve a
 lot of problems: the AI needs to remember the previous workflow steps and user
@@ -14,6 +14,19 @@ Fixpoint's goal is to solve these problems for you so that you can focus on the
 goals of your AI and your application.
 
 ## Fixpoint's features
+
+### Workflows
+
+Workflows let you coordinate one or more LLMs together in multi-step
+interactions. Each step is checkpointed, so they are reliable in the face of LLM
+provider or other system failure.
+([workflow docs][workflows])
+
+### Human-in-the-loop
+
+Incorporate human-in-the-loop into any step of your LLM workflow. You can audit
+your LLM's outputs, make corrections, or do any other human steps before
+resuming the rest of your workflow.
 
 ### Memory and Data
 
@@ -29,26 +42,11 @@ return the first response. Cache LLM agent requests so you don't waste money
 repeating the same tokens.
 ([durability docs][durability])
 
-### Workflows
-
-Workflows let you coordinate one or more LLMs together in multi-step
-interactions. Each step is checkpointed, so they are reliable in the face of LLM
-provider or other system failure.
-([workflow docs][workflows])
-
 ### Structured Data
 
 Control the structure of your LLM output so that the rest of your program can
 easily work with it.
 ([structured data docs][structured-data])
-
-### Human-in-the-loop
-
-_coming soon_
-
-Incorporate human-in-the-loop into any step of your LLM workflow. You can audit
-your LLM's outputs, make corrections, or do any other human steps before
-resuming the rest of your workflow.
 
 ### Routing and Multi-Plexing
 
