[docs] Very small change to docs blurb

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -2,7 +2,7 @@
 
 Fixpoint is open-source infra for stateful AI workflows with human-in-the-loop.
 We let you build long-running AI workflows that you can transition between
-chatbot, autonomous agents, and human-in-the-loop review.
+chatbot, autonomous agents, and human-in-the-loop.
 
 Normally, when making multi-step AI workflows and agents, you need to solve a
 lot of problems: the AI needs to remember the previous workflow steps and user
